--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
+*.sqlite filter=lfs diff=lfs merge=lfs -text
 slogans.sqlite !text !filter !merge !diff
