--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.sqlite filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+
 slogans.sqlite !text !filter !merge !diff
